fix icon on the right to be aligned with better size

--- a/app/assets/stylesheets/components/_challenge_card.scss
+++ b/app/assets/stylesheets/components/_challenge_card.scss
@@ -1,4 +1,11 @@
 // challenges dashboard page
+.link-challenge {
+    text-decoration: none;
+    :hover {
+      text-decoration: none;
+    }
+  }
+
 .challenge-card {
   position: relative;
   display: flex;
@@ -9,9 +16,6 @@
   box-shadow: 0 0 8px rgba(0,0,0,0.2);
   border-radius: 4px;
   margin: 8px;
-  .link {
-    text-decoration: none;
-  }
   .avatar {
     margin-left: 8px;
   }
